--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2026 First Step Montessori. All rights reserved.</p>
+                <p><a href="https://www.atreyasofttech.in/" target="_blank" rel="noopener noreferrer">Developed by Atreys SofTech</a></p>
             </div>
         </div>
     </footer>
