--- a/index.html
+++ b/index.html
@@ -541,10 +541,8 @@
                 <div class="footer-section">
                     <h4>Connect With Us</h4>
                     <div class="social-links">
-                        <a href="#" class="social-link facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
-                        <a href="#" class="social-link instagram"><i class="fab fa-instagram"></i> Instagram</a>
-                        <a href="#" class="social-link twitter"><i class="fab fa-twitter"></i> Twitter</a>
-                    </div>
+                        <a href="https://www.instagram.com/firststepmontessori.mysore/" target="_blank" rel="noopener noreferrer" class="social-link instagram"><i class="fab fa-instagram"></i> Instagram</a>
+                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
