to load images automatically

--- a/gallery.html
+++ b/gallery.html
@@ -73,12 +73,7 @@
 
             <!-- Filter Controls -->
             <div class="gallery-filters" id="gallery-filters">
-                <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="classroom" data-category-prefix="classroom">Classroom</button>
-                <button class="filter-btn" data-filter="outdoor" data-category-prefix="outdoor">Outdoor</button>
-                <button class="filter-btn" data-filter="arts" data-category-prefix="arts">Arts</button>
-                <button class="filter-btn" data-filter="activities"
-                    data-category-prefix="activities">Activities</button>
+                <!-- Filters will be generated dynamically -->
             </div>
 
             <div class="gallery-reel" id="gallery-reel">
@@ -138,7 +133,7 @@
         </button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2"></script>
 </body>
 
 </html>
