--- a/gallery.html
+++ b/gallery.html
@@ -83,6 +83,7 @@
             <!-- Scroll Controls -->
             <div class="gallery-controls">
                 <button id="scroll-left" class="control-btn"><i class="fas fa-chevron-left"></i></button>
+                <button id="pause-resume" class="control-btn"><i class="fas fa-pause"></i></button>
                 <button id="scroll-right" class="control-btn"><i class="fas fa-chevron-right"></i></button>
             </div>
         </div>
